# theta-gang

./: .gitignore  02i_transformer_combined.ipynb  LICENSE  README.md  dataset.py  demo.ipynb  pipeline_pytorch_v4.ipynb  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: pages.yml
artifacts/: maze_dt_100.npy  maze_dt_50.npy  maze_mask_100.npy  maze_mask_50.npy  maze_meta.json  maze_occ_100.npy  maze_occ_50.npy
notebooks/: 02i_transformer_combined.ipynb  pipeline_pytorch_v4.ipynb  pipeline_v2_transformer.ipynb  pipeline_v3.ipynb
notebooks/analysis/: ANALYSIS_LOG.md  analysis_01_spatial_info.py  analysis_02_rate_maps.py  analysis_03_waveform_pca.py  analysis_04_arm_discriminability.py  analysis_05_difficult_zones.py  analysis_06_temporal_dynamics.py  analysis_07_feature_ablation.py
pres/: index.html
scripts/: evaluate.py  train.py  visualize_data.py
src/: __init__.py  config.py  dataset.py  geometry.py  losses.py  model.py  trainer.py
