[project]
name = "spike-transformer"
version = "0.1.0"
description = "Neural position decoding from extracellular spike recordings using a hierarchical Transformer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0,<2",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]
